💬 コメント追加(platform.ini)

--- a/platformio.ini
+++ b/platformio.ini
@@ -8,6 +8,7 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
+;以下2行，おまけです．buildが速くなるかもしれないです
 [platformio]
 build_cache_dir = .pio/cache
 
@@ -15,5 +16,6 @@ build_cache_dir = .pio/cache
 platform = espressif32
 board = upesy_wroom
 framework = arduino
+;以下2行，必須です．これがないと，ESP32Servoライブラリが使えません→エラーが出ます
 lib_deps = 
     ESP32Servo
